<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/settings">
        <menu>
            <item
                android:title="@string/game_custom_new"
                android:id="@+id/item_start_custom_game_fragment"
                android:icon="@drawable/ic_custom_plus_one"/>
            <item
                android:id="@+id/item_settings"
                android:icon="@drawable/ic_build_black_24dp"
                android:title="@string/settings"/>
        </menu>
    </item>

    <item android:title="@string/sudoku_normal">
        <menu>
            <item
                android:title="@string/game_nine"
                android:id="@+id/item_start_game_nine"
                android:icon="@drawable/ic_filter_9_black_24dp"/>
            <item
                android:title="@string/game_nine_diagonal"
                android:id="@+id/item_start_game_nine_diagonal"
                android:icon="@drawable/ic_close_black_24dp"/>
            <item
                android:title="@string/game_nine_window"
                android:id="@+id/item_start_game_nine_window"
                android:icon="@drawable/ic_border_all_black_24dp"/>
            <item
                android:title="@string/game_nine_percentage"
                android:id="@+id/item_start_game_nine_percentage"
                android:icon="@drawable/ic_exposure_black_24dp"/>
            <item
                android:title="@string/game_eight"
                android:id="@+id/item_start_game_eight"
                android:icon="@drawable/ic_filter_8_black_24dp"/>
            <item
                android:title="@string/game_eight_diagonal"
                android:id="@+id/item_start_game_eight_diagonal"
                android:icon="@drawable/ic_filter_8_black_24dp"/>
            <item
                android:title="@string/game_six"
                android:id="@+id/item_start_game_six"
                android:icon="@drawable/ic_filter_6_black_24dp"/>
            <item
                android:title="@string/game_six_diagonal"
                android:id="@+id/item_start_game_six_diagonal"
                android:icon="@drawable/ic_filter_6_black_24dp"/>
            <item
                android:title="@string/game_four"
                android:id="@+id/item_start_game_four"
                android:icon="@drawable/ic_filter_4_black_24dp"/>
        </menu>

    </item>

    <item android:title="@string/game_irregular">
        <menu>
            <item
                android:title="@string/game_irregular_nine"
                android:id="@+id/item_start_game_irregular_nine"
                android:icon="@drawable/ic_filter_9_black_24dp"/>
            <item
                android:title="@string/game_irregular_eight"
                android:id="@+id/item_start_game_irregular_eight"
                android:icon="@drawable/ic_filter_8_black_24dp"/>
            <item
                android:title="@string/game_irregular_seven"
                android:id="@+id/item_start_game_irregular_seven"
                android:icon="@drawable/ic_filter_7_black_24dp"/>
            <item
                android:title="@string/game_irregular_six"
                android:id="@+id/item_start_game_irregular_six"
                android:icon="@drawable/ic_filter_6_black_24dp"/>
            <item
                android:title="@string/game_irregular_five"
                android:id="@+id/item_start_game_irregular_five"
                android:icon="@drawable/ic_filter_5_black_24dp"/>
            <item
                android:title="@string/game_irregular_four"
                android:id="@+id/item_start_game_irregular_four"
                android:icon="@drawable/ic_filter_4_black_24dp"/>
        </menu>
    </item>

</menu>